--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,6 @@
 {
     "SWADETOOLS.Bennies": "Benis",
-    "SWADETOOLS.Modifier": "Modificador",
+    "SWADETOOLS.Modifier": "Mod.",
     "SWADETOOLS.Fighting": "Pelear",
     "SWADETOOLS.SettingUsePP": "Puntos de Poder Actuales",
     "SWADETOOLS.Targetshaken": "Aturdido",
