--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -82,5 +82,26 @@
     "SWADETOOLS.ConvictionKept": "Convicção foi mantida até a próxima rodada!",
     "SWADETOOLS.SoakDmg": "Absorver Dano",
     "SWADETOOLS.DoSoak": "tenta absorver o Dano",
-    "SWADETOOLS.RoFFinalMod": "Modificador Final"
+    "SWADETOOLS.RoFFinalMod": "Modificador Final",
+    "SWADETOOLS.settingName": "Vantagens, Habilidades e Características",
+    "SWADETOOLS.settingNameButton": "Mudar os nomes padrões",
+    "SWADETOOLS.settingNameHint": "Mude os nomes padrões que afetam as rolagens automaticamente (habilidades são consideradas como itens de vantagem (edge)). Se você está usando o Básico de SWADE num idioma suportado por SWADE TOOLS, você provavelmente não terá que alterar nada aqui.",
+    "SWADETOOLS.ElanSetting": "Impulso",
+    "SWADETOOLS.NoMercySetting" : "Impiedoso",
+    "SWADETOOLS.IronJawSetting" : "Queixo de Ferro",
+    "SWADETOOLS.CombatReflexesSetting": "Reflexos de Combate",
+    "SWADETOOLS.ConstructSetting": "Construto",
+    "SWADETOOLS.HardySetting": "Robusto",
+    "SWADETOOLS.HardyWarn": " tem Robusto, então não há efeito em outro resultado Abalado",
+    "SWADETOOLS.UndeadSetting": "Morto-Vivo",
+    "SWADETOOLS.settingRules": "Regras de Ambientação",
+    "SWADETOOLS.settingRulesButton": "Escolha as Regras de Ambientação",
+    "SWADETOOLS.settingRulesHint": "Marque as Regras de Ambientação que está usando para mudar a configuração e automação.",
+    "SWADETOOLS.DumbLuckSetting" : "Pura Sorte",
+    "SWADETOOLS.HardChoicesSetting" : "Escolhas Difíceis",
+    "SWADETOOLS.UnarmoredHeroSetting" : "Heróis Sem Armadura",
+    "SWADETOOLS.WoundCapSetting" : "Limite de Ferimentos",
+    "SWADETOOLS.HardChoicesWarn" : "Ao usar Escolhas Difíceis, Benes de NPCs Cartas Selvagens serão ignorados. Você também quer desabilitar O Curinga é Selvagem e configurar os Benes iniciais do Mestre como zero? Esse é o padrão de Escolhas Difíceis.",
+    "SWADETOOLS.Yes": "Sim",
+    "SWADETOOLS.No": "Não"
 }
