--- a/lang/en.json
+++ b/lang/en.json
@@ -70,8 +70,8 @@
     "SWADETOOLS.NoItemEquipped": "No item equipped on selected token",
     "SWADETOOLS.TipRofRoll": "For RoF, hit/raise are defined manually",
     "SWADETOOLS.TipTargetNumber": "(N) is the target number (visible to GM only)",
-    "SWADETOOLS.SettingsItemNameClick": "Show info when clicking on weapon/power name",
-    "SWADETOOLS.SettingsItemNameClickHint": "This will keep the default behaviour on click of a power/weapon name (normally show some info), instead of opening a dialog to roll.",
+    "SWADETOOLS.SettingsItemNameClick": "Show info when clicking on weapon/power/skill name",
+    "SWADETOOLS.SettingsItemNameClickHint": "This will keep the default behaviour on click of a power/weapon/skill name (normally show some info), instead of opening a dialog to roll.",
     "SWADETOOLS.SettingsDefaultStatus": "Use system default status icons when available",
     "SWADETOOLS.SettingsDefaultStatusHint": "Enable this to use the system default status icons instead of Swade Tools icons.",
     "SWADETOOLS.SettingsJokersWild": "Disable Joker's Wild",
@@ -103,7 +103,12 @@
     "SWADETOOLS.WoundCapSetting" : "Wound Cap",
     "SWADETOOLS.HardChoicesWarn" : "When using Hard Choices, NPC WildCard bennies will be ignored. Do you want to also disable Joker's Wild and set starting GM Bennies to zero? This is the default for Hard Choices.",
     "SWADETOOLS.Yes": "Yes",
-    "SWADETOOLS.No": "No"
-
+    "SWADETOOLS.No": "No",
+    "SWADETOOLS.ConfigDisabled": "configuration was disabled to avoid conflict with Swade Tools",
+    "SWADETOOLS.ConfigEnabled": "configuration was enabled automatically by Swade Tools",
+    "SWADETOOLS.FightingWarn": "was modified from Fighting according to your Swade Tools settings to:",
+    "SWADETOOLS.SettingsAutoInitStart":"Don't roll initiative automatically when a starting a combat",
+    "SWADETOOLS.SettingsAutoInitStartHint":"(Requires Reload) Disable the automatic initative roll when starting a combat.",
+    "SWADETOOLS.AutoDisableWarn":"If checked, Swade Tools will not enable the following SWADE system setting automatically at start: "
     
 }
