--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -120,5 +120,6 @@
     "SWADETOOLS.GrittyDamageHint": "Escolha uma tabela para rolar Dano Severo",
     "SWADETOOLS.Disabled":"Desabilitado",
     "SWADETOOLS.NoOperator":"Não há um Motorista no Veículo",
-    "SWADETOOLS.NoOperatorSkill":"Não há uma perícia de manobra cadastrada no veículo"
+    "SWADETOOLS.NoOperatorSkill":"Não há uma perícia de manobra cadastrada no veículo",
+    "SWADETOOLS.WildAttack":"Ataque Selvagem"
 }
