Add French translation

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -36,7 +36,7 @@
     "SWADETOOLS.CriticalFailure": "Echec Critique!",
     "SWADETOOLS.RerollBtn": "Relancer en dépensant un Jeton",
     "SWADETOOLS.AutoInitWarn": "Activé par défaut avec SWADE Tools, mais désactivé dans la configuration système pour éviter les conflits",
-    "SWADETOOLS.Fighting": "Combattre",
+    "SWADETOOLS.Fighting": "Combat",
     "SWADETOOLS.SettingFighting": "Nom de la compétence de Combat",
     "SWADETOOLS.SettingFightingHint": "Compétence à utiliser pour calculer la Parade et déterminer si la cible sera touchée en se basant sur la Parade (dans la plupart des cas, laisser à l'identique).",
     "SWADETOOLS.RechargeQuestion": "Recharger?",
@@ -65,7 +65,7 @@
     "SWADETOOLS.PermissionActor": "Vous n'avez pas les droits pour utiliser ce Personnage (ou sa fonction)",
     "SWADETOOLS.NotShaken": "Le Personnage n'est plus Secoué",
     "SWADETOOLS.PPHint": "PP à ajouter au coût. Peut être négatif",
-    "SWADETOOLS.ModHint": "Autories les nombres ou les dés  (exemple: -2 or 1d6)",
+    "SWADETOOLS.ModHint": "Autorise les nombres ou les dés  (exemple: -2 or 1d6)",
     "SWADETOOLS.ShowDialogCheck": "Montre la fenêtre de dialogue (dégâts et autres actions)",
     "SWADETOOLS.NoItemEquipped": "Aucun item équipé sur le Token selectionné",
     "SWADETOOLS.TipRofRoll": "Pour la CdT, les touches/augmentation sont définies manuellement",
