--- a/lang/en.json
+++ b/lang/en.json
@@ -39,8 +39,8 @@
     "SWADETOOLS.Fighting": "Fighting",
     "SWADETOOLS.SettingFighting": "Fighting Skill Name",
     "SWADETOOLS.SettingFightingHint": "Skill name to use for calculate Parry and determine if target will be hit based on Parry (in most cases, leave as it is).",
-    "SWADETOOLS.RechargeQuestion": "Recharge?",
-    "SWADETOOLS.Recharged": "Recharged",
+    "SWADETOOLS.RechargeQuestion": "Reload?",
+    "SWADETOOLS.Recharged": "Reloaded",
     "SWADETOOLS.NotEnoughShots": "don't have enough shots",
     "SWADETOOLS.NotEnoughPP": "don't have enough Power Points",
     "SWADETOOLS.FailedPP": "Power Failed (1 PP Spent)",  
@@ -142,7 +142,9 @@
     "SWADETOOLS.DodgeSetting": "Dodge",
     "SWADETOOLS.BlockSetting": "Block",
     "SWADETOOLS.ImprovedBlockSetting": "Improved Block",
-    "SWADETOOLS.FrenzySetting": "Frenzy"
+    "SWADETOOLS.FrenzySetting": "Frenzy",
+    "SWADETOOLS.SettingShowSituational": "Always show Situational Modifiers for target",
+    "SWADETOOLS.SettingShowSituationalHint": "With this option checked, targets' modifiers will be always visible, no need to click at (?)"
     
     
 }
