add Formation Fighter from Savage Worlds Pathfinder
When acting as the ally of an attacker, a character with Formation
Fighter will add +2 to the gangup bonus instead of +1. Max gangup bonus
is still +4.

--- a/lang/en.json
+++ b/lang/en.json
@@ -143,6 +143,7 @@
     "SWADETOOLS.BlockSetting": "Block",
     "SWADETOOLS.ImprovedBlockSetting": "Improved Block",
     "SWADETOOLS.FrenzySetting": "Frenzy",
+    "SWADETOOLS.FormationFighterSetting": "Formation Fighter",
     "SWADETOOLS.SettingShowSituational": "Always show Situational Modifiers for target",
     "SWADETOOLS.SettingShowSituationalHint": "With this option checked, targets' modifiers will be always visible, no need to click at (?)"
     
