--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -144,5 +144,28 @@
     "SWADETOOLS.ImprovedBlockSetting": "Bloquear Aprimorado",
     "SWADETOOLS.FrenzySetting": "Frenesi",
     "SWADETOOLS.SettingShowSituational": "Sempre mostrar modificadores situacionais do alvo",
-    "SWADETOOLS.SettingShowSituationalHint": "Com essa opção ativada, os modificadores do alvo ficarão sempre visíveis, sem precisar clicar em (?)"
+    "SWADETOOLS.SettingShowSituationalHint": "Com essa opção ativada, os modificadores do alvo ficarão sempre visíveis, sem precisar clicar em (?)",
+    "SWADETOOLS.settingCustom": "Customização",
+    "SWADETOOLS.settingCustomButton": "Personalize o módulo",
+    "SWADETOOLS.settingCustomHint": "Altere o padrão do módulo SWADE Tools para funcionar melhor com o jeito que você joga.",
+    "SWADETOOLS.StatusIconsSetting":"Usar ícones de Estado",
+    "SWADETOOLS.StatusIconsSettingHint":"Altere os ícones de Estado padrão para os ícones do sistema ou desative.",
+    "SWADETOOLS.StatusIconsSettingDefault":"SWADE Tools",
+    "SWADETOOLS.StatusIconsSettingSystem":"Sistema SWADE",
+    "SWADETOOLS.StatusIconsSettingNone":"Desativar",
+    "SWADETOOLS.SettingNoAutoRoll":"Desabilitar rolagens automáticas em combate",
+    "SWADETOOLS.SettingNoAutoRollHint":"Essa opção desabilita as rolagens automáticas para sair de Atordoado e Abalado durante o combate.",
+    "SWADETOOLS.sayIsShaken": "está Abalado",
+    "SWADETOOLS.sayIsStunned": "está Atordoado",
+    "SWADETOOLS.Scale": "Escala",
+    "SWADETOOLS.SettinguseScale": "Usar Escala",
+    "SWADETOOLS.SettinguseScaleHint": "Calcular modificadores de ataque baseado em escala. Criaturas com Esmagar (habilidade especial) mostrarão uma caixa de marcação no ataque",
+    "SWADETOOLS.SwatSetting": "Esmagar",
+    "SWADETOOLS.SettingreloadX": "Mostrar botão Recarregar X",
+    "SWADETOOLS.SettingreloadXHint": "Exibe um botão para Recarregar um número de balas ao invés do pente todo.",
+    "SWADETOOLS.SituationalRules": "Regras Situacionais",
+    "SWADETOOLS.Customization": "Personalização",
+    "SWADETOOLS.RulesSettings": "Regras para cenários",
+    "SWADETOOLS.bullets": "tiros"
+
 }
