--- a/lang/it.json
+++ b/lang/it.json
@@ -1,22 +1,22 @@
 {
     "SWADETOOLS.Joker":"Jolly",
-    "SWADETOOLS.UnShakenAttempt": "Prova a riprendersi da Scosso",
-    "SWADETOOLS.UnStunnedAttempt": "Prova a riprendersi da Stordito",
-    "SWADETOOLS.RemDistr": "Non è più Distratto",
-    "SWADETOOLS.RemVuln": "Non è più Vulnerabile",
-    "SWADETOOLS.RemShaken": "Non è più Scosso",
-    "SWADETOOLS.StillShaken": "Rimane Scosso",
-    "SWADETOOLS.RemStunnedSuc": "Non è più Stordito, ma rimane Distratto e Vulnerabile",
-    "SWADETOOLS.RemStunnedRaise": "Non è più Stordito",
-    "SWADETOOLS.StillStunned": "Rimane Stordito",
-    "SWADETOOLS.ItsBound": "È Bloccato, non può effettuare azioni fisiche e può solo provare a liberarsi usando Atletica o Forza-2",
-    "SWADETOOLS.ItsEntangled": "È Avviluppato e non può muoversi, ma può solo provare a liberarsi usando Atletica o Forza-2",
-    "SWADETOOLS.NoBennies": "Non hai Benny",
+    "SWADETOOLS.UnShakenAttempt": "prova a riprendersi da Scosso",
+    "SWADETOOLS.UnStunnedAttempt": "prova a riprendersi da Stordito",
+    "SWADETOOLS.RemDistr": "non è più Distratto",
+    "SWADETOOLS.RemVuln": "non è più Vulnerabile",
+    "SWADETOOLS.RemShaken": "non è più Scosso",
+    "SWADETOOLS.StillShaken": "rimane Scosso",
+    "SWADETOOLS.RemStunnedSuc": "non è più Stordito, ma rimane Distratto e Vulnerabile",
+    "SWADETOOLS.RemStunnedRaise": "non è più Stordito, ma rimane Vulnerabile fino alla fine del suo turno",
+    "SWADETOOLS.StillStunned": "rimane Stordito",
+    "SWADETOOLS.ItsBound": "è Bloccato, non può effettuare azioni fisiche e può solo provare a liberarsi usando Atletica o Forza-2",
+    "SWADETOOLS.ItsEntangled": "è Avviluppato e non può muoversi, ma può solo provare a liberarsi usando Atletica o Forza-2",
+    "SWADETOOLS.NoBennies": "non ha Benny",
     "SWADETOOLS.UnshakenBennyButton": "Riprenditi da Scosso spendendo un Benny",
     "SWADETOOLS.JokersWild": "Pesca il Jolly!",
     "SWADETOOLS.JokersWildMsg": "Tutti ricevono un Benny!",
     "SWADETOOLS.YouHave": "Tu Hai",
-    "SWADETOOLS.AsGM": "Come Gamemaster",
+    "SWADETOOLS.AsGM": "come Gamemaster",
     "SWADETOOLS.Have": "ha",
     "SWADETOOLS.Bennies": "Benny",
     "SWADETOOLS.Benny": "Benny",
@@ -41,8 +41,8 @@
     "SWADETOOLS.SettingFightingHint": "Nome dell'abilità usata per calcolare la Parata e per determinare se il bersaglio sarà colpito basandosi sulla Parata (nella maggior parte dei casi, lascialo com'è).",
     "SWADETOOLS.RechargeQuestion": "Ricaricare?",
     "SWADETOOLS.Recharged": "Ricaricato",
-    "SWADETOOLS.NotEnoughShots": "Non hai abbastanza munizioni",
-    "SWADETOOLS.NotEnoughPP": "Non hai abbastanza Punti Potere",
+    "SWADETOOLS.NotEnoughShots": "non ha abbastanza munizioni",
+    "SWADETOOLS.NotEnoughPP": "non ha abbastanza Punti Potere",
     "SWADETOOLS.FailedPP": "Attivazione Potere Fallita (1 PP Speso)",  
     "SWADETOOLS.ExtraPP": "PP Extra",    
     "SWADETOOLS.SettingUseShots": "Traccia Munizioni",
@@ -60,7 +60,7 @@
     "SWADETOOLS.ApplyDamage": "Applica Danno",
     "SWADETOOLS.RollDamage": "Tira il Danno",
     "SWADETOOLS.TargetsTitleSkill": "Bersaglio: clicca per tirare il danno",
-    "SWADETOOLS.TargetsTitleDamage": "Bersaglio: clicca per applicare il danno (solo GM)",
+    "SWADETOOLS.TargetsTitleDamage": "Bersagli: clicca per applicare il danno (solo GM)",
     "SWADETOOLS.OnlyGM": "Solo il GM ha il permesso di farlo",
     "SWADETOOLS.PermissionActor": "Non hai il permesso di usare questo Personaggio",
     "SWADETOOLS.NotShaken": "Il Personaggio non è più Scosso",
@@ -70,8 +70,8 @@
     "SWADETOOLS.NoItemEquipped": "Nessun oggetto equipaggiato per il token selezionato",
     "SWADETOOLS.TipRofRoll": "Per CdT, colpito/incremento sono definiti manualmente",
     "SWADETOOLS.TipTargetNumber": "(N) è il numero chiave per colpire (visibile solo al GM)",
-    "SWADETOOLS.SettingsItemNameClick": "Mostra le info quando clicchi sui nomi delle armi/poteri",
-    "SWADETOOLS.SettingsItemNameClickHint": "Manterrà il funzionamento predefinito al clic sul nome di un potere / arma (normalmente mostra alcune informazioni), invece di aprire una finestra di dialogo per tirare.",
+    "SWADETOOLS.SettingsItemNameClick": "Mostra le info quando clicchi sui nomi delle armi/poteri/abilità",
+    "SWADETOOLS.SettingsItemNameClickHint": "Manterrà il funzionamento predefinito al clic sul nome di un potere/arma/abilità (normalmente mostra alcune informazioni), invece di aprire una finestra di dialogo per tirare.",
     "SWADETOOLS.SettingsDefaultStatus": "Usa le icone di status di sistema quando disponibili",
     "SWADETOOLS.SettingsDefaultStatusHint": "Attivalo per usare le icone di status di sistema invece che quelle di Swade Tools.",
     "SWADETOOLS.SettingsJokersWild": "Disattiva il Jolly Impazzito",
@@ -81,7 +81,7 @@
     "SWADETOOLS.AlreadyConvic": "Questo personaggio ha già l'Ispirazione attiva",
     "SWADETOOLS.ConvictionKept": "L'Ispirazione è stata estesa al turno successivo!",
     "SWADETOOLS.SoakDmg": "Assorbimento Danni",
-    "SWADETOOLS.DoSoak": "Prova ad assorbire il danno",
+    "SWADETOOLS.DoSoak": "prova ad Assorbire il Danno",
     "SWADETOOLS.RoFFinalMod": "Modificatore Finale",
     "SWADETOOLS.settingName": "Vantaggi, Capacità e Tratti",
     "SWADETOOLS.settingNameButton": "Modifica Nome di Default",
@@ -98,12 +98,76 @@
     "SWADETOOLS.settingRulesButton": "Scegli le Regole di Ambientazione",
     "SWADETOOLS.settingRulesHint": "Attiva le Regole di Ambientazione che usi per cambiare le impostazione e le automazioni.",
     "SWADETOOLS.DumbLuckSetting" : "Fortuna Cieca",
-    "SWADETOOLS.HardChoicesSetting" : "Scelte Difficili",
+    "SWADETOOLS.HardChoicesSetting" : "Decisioni Difficili",
     "SWADETOOLS.UnarmoredHeroSetting" : "Eroi Senza Armatura",
     "SWADETOOLS.WoundCapSetting" : "Limite alle Ferite",
-    "SWADETOOLS.HardChoicesWarn" : "Quando usi Scelte Difficili, i Benny dei PNG Protagonisti saranno ignorati. Vuoi, inoltre, disabilitare Jolly Impazziti e impostare i Benny Iniziali del GM a zero? Questa impostazione è di default per Scelte Difficili.",
-    "SWADETOOLS.Yes": "Si",
-    "SWADETOOLS.No": "No"
-
+    "SWADETOOLS.HardChoicesWarn" : "Quando usi Decisioni Difficili, i Benny dei PNG Protagonisti saranno ignorati. Vuoi, inoltre, disabilitare Jolly Impazziti e impostare i Benny Iniziali del GM a zero? Questa impostazione è di default per Decisioni Difficili.",
+    "SWADETOOLS.Yes": "Sì",
+    "SWADETOOLS.No": "No",
+    "SWADETOOLS.ConfigDisabled": "la configurazione è stata disabilitata per evitare conflitti con Swade Tools",
+    "SWADETOOLS.ConfigEnabled": "la configurazione è stata abilitata automaticamente da Swade Tools",
+    "SWADETOOLS.FightingWarn": "è stato modificato da Combattere, in base alle tue impostazioni di Swade Tools, in:",
+    "SWADETOOLS.SettingsAutoInitStart":"Non tirare automaticamente l'iniziativa all'inizio di un combattimento",
+    "SWADETOOLS.SettingsAutoInitStartHint":"(Richiede Ricarica) Disattiva il tiro di iniziativa automatico all'inizio di un combattimento.",
+    "SWADETOOLS.AutoDisableWarn":"Se selezionato, Swade Tools non abiliterà automaticamente le seguenti impostazioni di sistema SWADE all'avvio: ",
+    "SWADETOOLS.Targetshakenvehicle": "Fuori Controllo",
+    "SWADETOOLS.OutOfControlRoll": "cerca di evitare di andare Fuori Controllo",
+    "SWADETOOLS.OutOfControlSuccess": "evita di andare Fuori Controllo",
+    "SWADETOOLS.OutOfControlFail": "va Fuori Controllo",
+    "SWADETOOLS.OutOfControlTable": "Tabella Fuori Controllo",
+    "SWADETOOLS.OutOfControlTableHint": "Scegli una tabella per tirare automaticamente quando un veicolo va Fuori Controllo",
+    "SWADETOOLS.GrittyDamage": "Danni Realistici",
+    "SWADETOOLS.GrittyDamageHint": "Scegli una tabella per tirare per Danni Realistici",
+    "SWADETOOLS.Disabled":"Disabilitato",
+    "SWADETOOLS.NoOperator":"Nessun Operatore in questo Veicolo",
+    "SWADETOOLS.NoOperatorSkill":"Nessuna Abilità per Operare trovata in questo Veicolo",
+    "SWADETOOLS.WildAttack":"Attacco Selvaggio",
+    "SWADETOOLS.UpdateSWADE": "La versione del tuo sistema SWADE non è compatibile con il modulo SWADE Tools. Si prega di aggiornare il sistema SWADE.",
+    "SWADETOOLS.TipRoFLower":"Quando usi la CdT, il risultato inferiore viene ignorato.",
+    "SWADETOOLS.ActDmgHint":"Danni da tirare quando si fa clic su Colpito/Incremento",
+    "SWADETOOLS.Default":"Default",
+    "SWADETOOLS.NoDmgActionDefined": "Non ci sono danni definiti nell'azione di questo oggetto. È stato utilizzato il danno di default (se definito).",
+    "SWADETOOLS.UseSkillSelected": "Usa Abilità",
+    "SWADETOOLS.NoSkillQuestion": "non ha abilità. Vorresti usarne una?",
+    "SWADETOOLS.RangedInMelee":"Arma a Distanza in Mischia: Utilizzare Parata",
+    "SWADETOOLS.IsVulnerable":"è Vulnerabile",
+    "SWADETOOLS.SeeSituational":"Vedi Modificatori Situazionali",
+    "SWADETOOLS.gangUpBonus":"Bonus Tutti Assieme",
+    "SWADETOOLS.TargetTooFar":"Il Bersaglio è oltre la Gittata Estrema",
+    "SWADETOOLS.Extreme":"Gittata Estrema",
+    "SWADETOOLS.SettingGangUp": "Calcola Tutti Assieme (crea PG amichevoli e PNG ostili)",
+    "SWADETOOLS.SettingGangUpHint": "Usando questa opzione, Tutti Assieme verrà calcolato automaticamente. Nuovi Personaggi (PG) saranno contrassegnati come amici nella configurazione Token e i PNG come ostili (puoi modificarlo in seguito, come in un PNG alleato). Se vuoi riparare tutti i Personaggi attuali, usa la macro: PC Friendly / NPC Hostile",
+    "SWADETOOLS.FriendlyPCMacroQuestion": "Questo contrassegnerà tutti i personaggi attuali (PG) in amichevoli e i PNG come ostili nella configurazione del token. Procedere?",
+    "SWADETOOLS.FriendlyPCMacroOk": "Tutti i PG sono amichevoli e gli NPC ostili!",
+    "SWADETOOLS.DodgeSetting": "Schivare",
+    "SWADETOOLS.BlockSetting": "Bloccare",
+    "SWADETOOLS.ImprovedBlockSetting": "Bloccare Migliorato",
+    "SWADETOOLS.FrenzySetting": "Frenesia",
+    "SWADETOOLS.FormationFighterSetting": "Formation Fighter",
+    "SWADETOOLS.SettingShowSituational": "Mostra sempre i Modificatori Situazionali per il bersaglio",
+    "SWADETOOLS.SettingShowSituationalHint": "Con questa opzione selezionata, i modificatori dei bersagli saranno sempre visibili, non è necessario fare clic su (?)",
+    "SWADETOOLS.settingCustom": "Personalizzazione",
+    "SWADETOOLS.settingCustomButton": "Personalizza il modulo",
+    "SWADETOOLS.settingCustomHint": "Modifica le opzioni di SWADE Tools predefinite in modo di adattarlo al tuo modo di giocare.",
+    "SWADETOOLS.StatusIconsSetting":"Usa Icone di Stato",
+    "SWADETOOLS.StatusIconsSettingHint":"Passare alle icone di stato predefinite dal sistema o disattivare le icone.",
+    "SWADETOOLS.StatusIconsSettingDefault":"SWADE Tools",
+    "SWADETOOLS.StatusIconsSettingSystem":"SWADE system",
+    "SWADETOOLS.StatusIconsSettingNone":"Disattivare",
+    "SWADETOOLS.SettingNoAutoRoll":"Disabilita i tiri automatici durante il combattimento",
+    "SWADETOOLS.SettingNoAutoRollHint":"Questa opzione disabilita i tiri automatici per rimuovere Stordimento o Scosso durante il combattimento.",
+    "SWADETOOLS.sayIsShaken": "è Scosso",
+    "SWADETOOLS.sayIsStunned": "è Stordito",
+    "SWADETOOLS.Scale": "Scala",
+    "SWADETOOLS.SettinguseScale": "Usa Scala",
+    "SWADETOOLS.SettinguseScaleHint": "Calcola i Modificatori di Scala negli attacchi. Le creature con Schiacciare (abilità speciale) avranno una casella da spuntare nel loro attacco",
+    "SWADETOOLS.SwatSetting": "Schiacciare",
+    "SWADETOOLS.SettingreloadX": "Mostra pulsante Ricarica X",
+    "SWADETOOLS.SettingreloadXHint": "Mostra un pulsante per ricaricare un numero specifico di proiettili invece della ricarica completa.",
+    "SWADETOOLS.SituationalRules": "Regole Situazionali",
+    "SWADETOOLS.Customization": "Personalizzazione",
+    "SWADETOOLS.RulesSettings": "Regole di Ambientazione",
+    "SWADETOOLS.bullets": "colpi"
+    
     
 }
